K8s/enterprise-gateway/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: enterprise-gateway
  namespace: { { .Values.namespace | quote } }
  labels:
    gateway-selector: enterprise-gateway
    app: enterprise-gateway
    component: enterprise-gateway

spec:
  ports:
    - name: http
      protocol: TCP
      port: 8888
      targetPort: 8888
      nodePort: 32544
  selector:
    gateway-selector: enterprise-gateway
    app: enterprise-gateway
    component: enterprise-gateway
  type: NodePort
